<resources>
    <string name="app_name">Language Dictionary</string>
    <string name="greetings_text_view">Greetings</string>
    <string name="questions_text_view">Questions</string>
    <string name="requests_text_view">Requests</string>
    <string name="declarations_text_view">Declarations</string>

    <string name="hide_show_declarations">Declarations</string>
    <string name="hide_show_requests">Requests</string>
    <string name="hide_show_questions">Questions</string>
    <string name="hide_show_greetings">Greetings</string>

    <string name="eula">END USER LICENSE FOR ANDROID { SOFTWARE NAME } SOFTWARE
PLEASE READ THIS DOCUMENT CAREFULLY BEFORE USING THIS SOFTWARE. THIS LICENSE PROVIDES IMPORTANT INFORMATION CONCERNING THE SOFTWARE, PROVIDES YOU WITH A LICENSE TO USE THE SOFTWARE AND CONTAINS WARRANTY AND LIABILITY INFORMATION.
BY USING THE SOFTWARE, YOU ARE ACCEPTING THE SOFTWARE "AS IS" AND AGREEING TO BE BOUND BY THE TERMS OF THIS LICENSE AGREEMENT.
IN NO ENVENT WILL THE AUTHORS BE HELD LIABLE FOR ANY DAMAGES ARISING FROM THE USE OF THIS SOFTWARE.
IF YOU DO NOT WISH TO DO SO, DO NOT USE THE SOFTWARE.
        \n
        \n1. Terms of License
        \nThis license allows you to: (a) use the Software on a single device; and If you wish to use the Software on more than one device, you must license another copy of the Software.
        \n
        \n2. Restrictions on Use
        \nUnless { Owner\'s name } (Owner) has authorized you to distribute the Software, you shall not make or distribute copies of the Software or transfer the Software from one device to another. You shall not decompile, reverse engineer, disassemble, include in other software, or translate the Software, or use the Software for any commercial purposes. You shall not modify, alter, change or otherwise make any modification to the Software or create derivative works based upon the Software. You shall not rent, lease, resell, sub-license, assign, distribute or otherwise transfer the Software or this license. Any attempt to do so shall be void and of no effect.
        \n
        \n3. Ownership
        \nThis license provides you with limited rights to use the Software. The Owner retains all ownership, right, title and interest in, to and of the Software and all copies of it. All rights not specifically granted in this license, including domestic and international copyrights, are reserved by the Owner.
        \n
        \n4. Proprietary Markings
        \nThe Owner\'s logos, product names, manuals, documentation, and other support materials are either patented, copyrighted, trademarked, constitute valuable trade secrets (whether or not any portion of them may be copyrighted or patented) or are otherwise proprietary to the Owner. You shall not remove or obscure the Owner\'s copyright, trade mark or other proprietary notices from any of the materials contained in this package or downloaded together with the Software.
        \n
        \n5. Disclaimer of Warranties and Technical Support
        \nThe Software is provided to you after paying a licence and on an "AS IS" basis, without any technical support or warranty of any kind including, without limitation, any warranty or condition of merchantability, fitness for a particular purpose and non-infringement.
        \n
        \nSOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSION MAY NOT APPLY TO YOU. YOU MAY ALSO HAVE OTHER LEGAL RIGHTS WHICH VARY FROM JURISDICTION TO JURISDICTION.
    </string>
    <string name="updates">Updates in this version: Uses internal file to generate database. Hide/Show Category from Menu Options.</string>
</resources>
