<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~ Created by Ryan Jones
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
  ~ License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later
  ~ version.
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
  ~ implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
  ~ License for more details. You should have received a copy of the GNU General Public License along with this
  ~ program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Creates group, checkableBehavior single value means
    the user can only select one at a time -->
    <item
        android:title="Show/Hide Category"/>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_greetings"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/hide_show_greetings"
            android:checked="true"/>

        <item
            android:id="@+id/menu_questions"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/hide_show_questions"
            android:checked="true"/>

        <item
            android:id="@+id/menu_requests"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/hide_show_requests"
            android:checked="true"/>

        <item
            android:id="@+id/menu_declarations"
            android:orderInCategory="4"
            app:showAsAction="never"
            android:title="@string/hide_show_declarations"
            android:checked="true"/>
    </group>
</menu>